# particle-bazel-example

./: .bazelignore  .bazelrc  .clangd  .gitignore  .gitmodules  BUILD.bazel  MODULE.bazel
docs/: particle_firmware_architecture.md
firmware/particle_p2/: BUILD.bazel  main.cc  particle_test.cc
lib/app_core/: BUILD.bazel  app_core.cc  app_core.h
lib/gpio_mirror/: BUILD.bazel  gpio_mirror.cc  gpio_mirror.h
lib/gpio_mirror/test/: BUILD.bazel  gpio_mirror_test.cc
lib/particle_chrono/: BUILD.bazel  system_clock.cc
lib/particle_chrono/public/pw_chrono_particle/: system_clock_config.h
lib/particle_chrono/public_overrides/pw_chrono_backend/: system_clock_config.h
lib/particle_gpio/: BUILD.bazel  particle_digital_io.cc  particle_digital_io.h
lib/particle_log/: BUILD.bazel  log_bridge.cc  log_bridge.h
lib/particle_sync/: BUILD.bazel
lib/particle_sync/public/pw_sync_particle/: mutex_inline.h  mutex_native.h
lib/particle_sync/public_overrides/pw_sync_backend/: mutex_inline.h  mutex_native.h
lib/particle_sys_io/: BUILD.bazel  sys_io.cc
lib/particle_thread/: BUILD.bazel  sleep.cc
lib/particle_thread/id_public_overrides/pw_thread_backend/: id_inline.h  id_native.h
lib/particle_thread/public/pw_thread_particle/: id_inline.h  id_native.h  sleep_inline.h  yield_inline.h
lib/particle_thread/sleep_public_overrides/pw_thread_backend/: sleep_inline.h
lib/particle_thread/yield_public_overrides/pw_thread_backend/: yield_inline.h
lib/particle_watchdog/: BUILD.bazel  watchdog.cc
lib/particle_watchdog/public/particle_watchdog/: watchdog.h
toolchain/: BUILD.bazel  extensions.bzl  gcc_arm_none_eabi.BUILD
tools/: BUILD.bazel  bazel  extract_elf_sizes.py  particle_crc.py
