module(name = "particle_p2_firmware")

# Particle Bazel - infrastructure for Particle firmware with Pigweed
bazel_dep(name = "particle_bazel")
local_path_override(
    module_name = "particle_bazel",
    path = "particle",
)

# Pigweed - via local submodule (shared with particle_bazel)
bazel_dep(name = "pigweed")
local_path_override(
    module_name = "pigweed",
    path = "third_party/pigweed",
)

# Standard dependencies (shared with particle_bazel)
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_cc", version = "0.1.1")
