# Tools for Particle firmware processing

package(default_visibility = ["//visibility:public"])

# Python script for patching SHA256/CRC32 into firmware binaries
py_binary(
    name = "particle_crc",
    srcs = ["particle_crc.py"],
)

# Python script for extracting ELF section sizes (two-pass linking)
py_binary(
    name = "extract_elf_sizes",
    srcs = ["extract_elf_sizes.py"],
)

# Export the scripts for use in genrules
exports_files([
    "particle_crc.py",
    "extract_elf_sizes.py",
])
