# Particle P2 GPIO Mirror Firmware

load("//third_party/particle/rules:particle_firmware.bzl",
     "particle_cc_binary",
     "particle_firmware_binary",
     "particle_flash_binary")

package(default_visibility = ["//visibility:public"])

# LED blink firmware library
cc_library(
    name = "gpio_mirror_firmware_lib",
    srcs = ["main.cc"],
    deps = [
        "//lib/particle_gpio",
        "//third_party/particle:device_os_headers",
        "//third_party/particle:pw_assert_stub",  # pw_assert implementation stub
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_log",
        "@pigweed//pw_sync:mutex",
        "@pigweed//pw_thread:sleep",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)

# GPIO mirror firmware binary (ELF)
particle_cc_binary(
    name = "gpio_mirror_firmware.elf",
    deps = [":gpio_mirror_firmware_lib"],
)

# Flashable binary with SHA256/CRC32 patched
particle_firmware_binary(
    name = "gpio_mirror_firmware",
    elf = ":gpio_mirror_firmware.elf",
)

# Flash target
particle_flash_binary(
    name = "flash",
    firmware = ":gpio_mirror_firmware.bin",
)

# Flash ELF directly (for debugging - may fail CRC check)
particle_flash_binary(
    name = "flash_elf",
    firmware = ":gpio_mirror_firmware.elf",
)
