# Particle P2 GPIO Mirror Firmware

load("@particle_bazel//rules:particle_firmware.bzl",
     "particle_firmware",
     "particle_flash_binary")

package(default_visibility = ["//visibility:public"])

# GPIO mirror firmware with CRC for OTA
# Outputs: gpio_mirror_firmware.bin (flashable) and gpio_mirror_firmware.elf
particle_firmware(
    name = "gpio_mirror_firmware",
    srcs = ["main.cc"],
    deps = [
        "//lib/gpio_mirror",
        "@particle_bazel//pw_digital_io_particle:digital_io",
        "@particle_bazel//pb_log:log_bridge",
        "@particle_bazel//:device_os_headers",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_log",
        "@pigweed//pw_sync:mutex",
        "@pigweed//pw_thread:sleep",
    ],
    platform = "@particle_bazel//platforms/p2:particle_p2",
)

# Flash target
particle_flash_binary(
    name = "flash",
    firmware = ":gpio_mirror_firmware",
)
