# Particle Device OS to pw_log bridge

load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "log_bridge",
    srcs = ["log_bridge.cc"],
    hdrs = ["log_bridge.h"],
    deps = [
        "//third_party/particle:device_os_headers",
        "//third_party/particle:services_dynalib",
        "@pigweed//pw_log",
        "@pigweed//pw_sys_io",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)
