# pw_thread backend for Particle Device OS

load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "id",
    hdrs = [
        "id_public_overrides/pw_thread_backend/id_inline.h",
        "id_public_overrides/pw_thread_backend/id_native.h",
    ],
    includes = ["id_public_overrides"],
    deps = [":id_private"],
)

cc_library(
    name = "id_private",
    hdrs = [
        "public/pw_thread_particle/id_inline.h",
        "public/pw_thread_particle/id_native.h",
    ],
    includes = ["public"],
    visibility = ["//visibility:private"],
    deps = [
        "//third_party/particle:device_os_headers",
        "//third_party/particle:hal_dynalib",
        "@pigweed//pw_thread:id.facade",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)

cc_library(
    name = "yield",
    hdrs = [
        "yield_public_overrides/pw_thread_backend/yield_inline.h",
    ],
    includes = ["yield_public_overrides"],
    deps = [":yield_private"],
)

cc_library(
    name = "yield_private",
    hdrs = [
        "public/pw_thread_particle/yield_inline.h",
    ],
    includes = ["public"],
    visibility = ["//visibility:private"],
    deps = [
        "//third_party/particle:device_os_headers",
        "//third_party/particle:hal_dynalib",
        "@pigweed//pw_thread:yield.facade",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)

cc_library(
    name = "sleep",
    srcs = ["sleep.cc"],
    hdrs = [
        "sleep_public_overrides/pw_thread_backend/sleep_inline.h",
    ],
    includes = ["sleep_public_overrides"],
    deps = [
        ":sleep_private",
        "//third_party/particle:device_os_headers",
        "//third_party/particle:hal_dynalib",
    ],
)

cc_library(
    name = "sleep_private",
    hdrs = [
        "public/pw_thread_particle/sleep_inline.h",
    ],
    includes = ["public"],
    visibility = ["//visibility:private"],
    deps = [
        "//third_party/particle:device_os_headers",
        "//third_party/particle:hal_dynalib",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_thread:sleep.facade",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)
